--- a/deploy/development/admin-deployment.yaml
+++ b/deploy/development/admin-deployment.yaml
@@ -21,7 +21,7 @@ spec:
         - containerPort: 3001
         readinessProbe:
           httpGet:
-            path: /
+            path: /health
             port: 3001
           initialDelaySeconds: 10
           periodSeconds: 20
