--- a/deploy/staging/ingress.yaml
+++ b/deploy/staging/ingress.yaml
@@ -39,9 +39,9 @@ spec:
             pathType: ImplementationSpecific
             backend:
               service:
-                name: grc-app-service
+                name: maintenance-page-svc
                 port: 
-                  number: 3000
+                  number: 8080
 
   - host: preprod.dashboard.gender-recognition.service.justice.gov.uk
     http:
@@ -50,6 +50,6 @@ spec:
             pathType: ImplementationSpecific
             backend:
               service:
-                name: grc-dashboard-service
+                name: maintenance-page-svc
                 port: 
-                  number: 3002
+                  number: 8080
