--- a/deploy/production/ingress-admin.yaml
+++ b/deploy/production/ingress-admin.yaml
@@ -18,6 +18,9 @@ spec:
   - hosts:
     - admin.apply-gender-recognition-certificate.service.gov.uk
     secretName: apply-gender-recognition-service-admin-secret
+  - hosts:
+    - dashboard.apply-gender-recognition-certificate.service.gov.uk
+    secretName: apply-gender-recognition-dashboard-secret
 
   rules:
     - host: admin.apply-gender-recognition-certificate.service.gov.uk
@@ -30,3 +33,14 @@ spec:
                 name: grc-admin-service
                 port:
                   number: 3001
+
+    - host: dashboard.apply-gender-recognition-certificate.service.gov.uk
+      http:
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: grc-dashboard-service
+                port:
+                  number: 3002
