--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 alembic==1.7.7
 attrs==21.2.0
-Babel==2.9.1
+Babel==2.12.1
 blinker==1.4
 boto3==1.21.27
 botocore==1.24.28
@@ -13,6 +13,7 @@ dnspython==2.1.0
 docopt==0.6.2
 email-validator==1.1.3
 Flask==2.1.2
+Flask-Babel==4.0.0
 Flask-BabelEx==0.9.4
 Flask-Limiter[redis]==3.5.0
 Flask-Login==0.5.0
@@ -27,7 +28,7 @@ greenlet==1.1.2
 idna==3.3
 iniconfig==1.1.1
 itsdangerous==2.0.1
-Jinja2==3.0.3
+Jinja2==3.1.0
 jmespath==0.10.0
 jsonpickle~=2.1.0
 Mako==1.2.2
@@ -46,15 +47,15 @@ pyScss==1.3.7
 pytest==6.2.5
 python-dateutil==2.8.2
 python-dotenv==0.19.2
-pytz==2021.3
-requests==2.27.1
+pytz==2022.7
+requests==2.31.0
 s3transfer==0.5.0
 six==1.16.0
 speaklater==1.3
 SQLAlchemy==1.4.29
 SQLAlchemy-Utils==0.38.2
 toml==0.10.2
-urllib3==1.26.14
+urllib3==1.26.18
 waitress==2.1.2
 Werkzeug==2.2.3
 WTForms==3.0.0
