--- a/deploy/staging/ingress.yaml
+++ b/deploy/staging/ingress.yaml
@@ -6,6 +6,17 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-grc-preprod-green
     external-dns.alpha.kubernetes.io/aws-weight: "100"
+    nginx.ingress.kubernetes.io/whitelist-source-range: "194.33.196.0/24, 194.33.192.0/24, 81.134.202.29/32"
+    nginx.ingress.kubernetes.io/server-snippet: |
+      location @custom_403 {
+        return 403 "{\"msg\":\"<br/>Gender Recognition Panel<br/>This is a restricted page. Please contact by email or telephone if you need access<br/>GRPenquiries@justice.gov.uk<br>Telephone: 0300 123 4503  Monday to Friday, 9am to 5pm<br/>\"}";
+      }
+      error_page 403 @custom_403;
+    #nginx.ingress.kubernetes.io/custom-http-errors: "403" |
+    #  error_page 403 /403.html;
+    #  location /403.html {
+    #      return 403 '{"error": {"status_code": 403,"status": "Not allowed buddy"}}';
+    #  }
     nginx.ingress.kubernetes.io/enable-modsecurity: "true"
     nginx.ingress.kubernetes.io/modsecurity-snippet: |
       SecRuleEngine On
@@ -16,11 +27,6 @@ metadata:
         pass,\
         nolog,\
         ctl:ruleRemoveById=951240"
-    nginx.ingress.kubernetes.io/server-snippet: |
-      location @custom_403 {
-        return 403 "<h1>There is a problem:</h1><br><h3>Go back to the previous page using the back arrow and enter valid content</h3>";
-      }
-      error_page 403 @custom_403;
 spec:
   ingressClassName: modsec
   tls:
