--- a/requirements.txt
+++ b/requirements.txt
@@ -59,7 +59,7 @@ waitress==2.1.2
 Werkzeug==2.2.3
 WTForms==3.0.0
 xhtml2pdf==0.2.15
-Pillow==9.3.0
+pillow==10.2.0
 PyMuPDF==1.20.1
 pyClamd==0.4.0
 cryptography==39.0.1
