--- a/deploy/development/dashboard-deployment.yaml
+++ b/deploy/development/dashboard-deployment.yaml
@@ -37,7 +37,7 @@ spec:
           - name: FLASK_APP
             value: dashboard
           - name: FLASK_ENV
-            value: production
+            value: development
           - name: SECRET_KEY
             valueFrom:
               secretKeyRef:
