--- a/deploy/staging/admin-deployment.yaml
+++ b/deploy/staging/admin-deployment.yaml
@@ -44,7 +44,7 @@ spec:
           - name: FLASK_APP
             value: admin
           - name: FLASK_ENV
-            value: production
+            value: staging
           - name: GOVUK_PAY_API
             value: "https://publicapi.payments.service.gov.uk/"
           - name: GOVUK_PAY_API_KEY
