--- a/deploy/staging/app-deployment.yaml
+++ b/deploy/staging/app-deployment.yaml
@@ -48,7 +48,7 @@ spec:
           - name: FLASK_APP
             value: grc
           - name: FLASK_ENV
-            value: production
+            value: staging
           - name: GOVUK_PAY_API
             value: "https://publicapi.payments.service.gov.uk/"
           - name: GOVUK_PAY_API_KEY
