--- a/deploy/staging/dashboard-deployment.yaml
+++ b/deploy/staging/dashboard-deployment.yaml
@@ -37,7 +37,7 @@ spec:
           - name: FLASK_APP
             value: dashboard
           - name: FLASK_ENV
-            value: production
+            value: staging
           - name: SECRET_KEY
             valueFrom:
               secretKeyRef:
