--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - image: 'circleci/python:3.8'
         environment:
           DATABASE_URL: 'postgresql://postgres:password@localhost:5432/grc'
-          FLASK_ENV: production
+          FLASK_ENV: test
           FLASK_DEBUG: 1
           FLASK_APP: grc
           LOG_LEVEL: DEBUG
@@ -41,8 +41,6 @@ jobs:
           NOTIFY_API: '${NOTIFY_API}'
           NOTIFY_OVERRIDE_EMAIL: ivan.touloumbadjian@hmcts.net
           BUCKET_NAME: '${AUTOMATED_TEST_BUCKET_NAME}'
-          AWS_ACCESS_KEY_ID: '${AUTOMATED_TEST_AWS_ACCESS_KEY_ID}'
-          AWS_SECRET_ACCESS_KEY: '${AUTOMATED_TEST_AWS_SECRET_ACCESS_KEY}'
           AWS_REGION: eu-west-2
           GOVUK_PAY_API: 'https://publicapi.payments.service.gov.uk/'
           GOVUK_PAY_API_KEY: '${GOVUK_PAY_API_KEY}'
@@ -101,7 +99,7 @@ jobs:
           name: Install Playwright and browsers
           command: |
             . venv/bin/activate
-            pip install playwright pytest-playwright asyncio pytest-html
+            pip install playwright==1.41.2 pytest-playwright asyncio pytest-html
             pip install -e .
             python -m playwright install --with-deps
       - run:
