--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,13 +118,14 @@ jobs:
           name: Run unit and integration tests
           command: |
             . venv/bin/activate
-            pytest --ignore=tests/end_to_end_tests --ignore=tests/test_ping_json.py --html=report.html
+            pytest --ignore=tests/end_to_end_tests --ignore=tests/test_ping_json.py --html=unit_int_report.html
       - run:
           name: Start site and run e2e
           command: |
             . venv/bin/activate
             waitress-serve --call --port=8080 'grc:create_app' &
-            pytest tests/end_to_end_tests tests/test_ping_json.py -s --show-capture=all -v --html=report.html
+            pytest tests/end_to_end_tests -s --show-capture=all -v --html=e2e_report.html
+            pytest tests/test_ping_json.py --html=smoke_report.html
       - store_artifacts:
           path: report.html
 
