--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,7 +122,7 @@ jobs:
           command: |
             . venv/bin/activate
             waitress-serve --call --port=8080 'grc:create_app' &
-            pytest tests/end_to_end_tests/ -s --show-capture=all -v --html=e2e_report.html
+            pytest tests/end_to_end_tests/* -s --show-capture=all -v --html=e2e_report.html
             pytest tests/test_ping_json.py --html=smoke_report.html
       - store_artifacts:
           path: report.html
