--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,7 +128,7 @@ jobs:
             . venv/bin/activate
             waitress-serve --call --port=8080 'grc:create_app' &
             pytest tests/test_ping_json.py --max-retries 5 --timeout 3 --html=reports/smoke_report.html
-            pytest tests/end_to_end_tests/journey_cy/* -s --show-capture=all -v --html=reports/e2e_report.html
+            pytest tests/end_to_end_tests/* -s --show-capture=all -v --html=reports/e2e_report.html
       - store_artifacts:
           path: reports/
 
