--- a/deploy/development/ingress-admin.yaml
+++ b/deploy/development/ingress-admin.yaml
@@ -2,9 +2,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: gender-recognition-service-admin
-  namespace: grc-preprod
+  namespace: grc-dev
   annotations:
-    nginx.ingress.kubernetes.io/whitelist-source-range: "194.33.196.0/24, 194.33.192.0/24, 81.134.202.29/32"
+    nginx.ingress.kubernetes.io/whitelist-source-range: "194.33.196.0/24, 194.33.192.0/24, 81.134.202.29/32, 95.147.221.25"
     nginx.ingress.kubernetes.io/server-snippet: |
       location @custom_403 {
         return 403 "{\"msg\":\"<br/>Gender Recognition Panel<br/>This is a restricted page. Please contact by email or telephone if you need access<br/>GRPenquiries@justice.gov.uk<br>Telephone: 0300 123 4503  Monday to Friday, 9am to 5pm<br/>\"}";
@@ -15,20 +15,20 @@ metadata:
     #  location /403.html {
     #      return 403 '{"error": {"status_code": 403,"status": "Not allowed buddy"}}';
     #  }
-    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-admin-grc-preprod-green
+    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-admin-grc-dev-green
     external-dns.alpha.kubernetes.io/aws-weight: "100"
 spec:
   ingressClassName: default
   tls:
   - hosts:
-    - preprod.admin.gender-recognition.service.justice.gov.uk
+    - dev.admin.gender-recognition.service.justice.gov.uk
     secretName: gender-recognition-service-admin-secret
   - hosts:
-    - preprod.dashboard.gender-recognition.service.justice.gov.uk
+    - dev.dashboard.gender-recognition.service.justice.gov.uk
     secretName: gender-recognition-dashboard-secret
 
   rules:
-  - host: preprod.admin.gender-recognition.service.justice.gov.uk
+  - host: dev.admin.gender-recognition.service.justice.gov.uk
     http:
       paths:
           - path: /
@@ -39,7 +39,7 @@ spec:
                 port: 
                   number: 3001
 
-  - host: preprod.dashboard.gender-recognition.service.justice.gov.uk
+  - host: dev.dashboard.gender-recognition.service.justice.gov.uk
     http:
       paths:
         - path: /
