--- a/deploy/development/ingress.yaml
+++ b/deploy/development/ingress.yaml
@@ -2,11 +2,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: gender-recognition-service
-  namespace: grc-preprod
+  namespace: grc-dev
   annotations:
-    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-grc-preprod-green
+    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-grc-dev-green
     external-dns.alpha.kubernetes.io/aws-weight: "100"
-    nginx.ingress.kubernetes.io/whitelist-source-range: "194.33.196.0/24, 194.33.192.0/24, 81.134.202.29/32"
+    nginx.ingress.kubernetes.io/whitelist-source-range: "194.33.196.0/24, 194.33.192.0/24, 81.134.202.29/32, 95.147.221.25"
     nginx.ingress.kubernetes.io/server-snippet: |
       location @custom_403 {
         return 403 "{\"msg\":\"<br/>Gender Recognition Panel<br/>This is a restricted page. Please contact by email or telephone if you need access<br/>GRPenquiries@justice.gov.uk<br>Telephone: 0300 123 4503  Monday to Friday, 9am to 5pm<br/>\"}";
@@ -31,11 +31,11 @@ spec:
   ingressClassName: modsec
   tls:
   - hosts:
-    - preprod.gender-recognition.service.justice.gov.uk
+    - dev.gender-recognition.service.justice.gov.uk
     secretName: gender-recognition-service-app-secret
 
   rules:
-  - host: preprod.gender-recognition.service.justice.gov.uk
+  - host: dev.gender-recognition.service.justice.gov.uk
     http:
       paths:
           - path: /
