--- a/deploy/development/grc-clamav-deployment.yaml
+++ b/deploy/development/grc-clamav-deployment.yaml
@@ -18,7 +18,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: grc-clamav
-        image: quay.io/ukhomeofficedigital/clamav:b1ccfa00da3810a205b4d7721030396e516118aa
+        image: clamav/clamav:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 3310
