--- a/deploy/development/jobs/anonymise-expired-applications.yaml
+++ b/deploy/development/jobs/anonymise-expired-applications.yaml
@@ -4,7 +4,7 @@ metadata:
   name: anonymise-expired-applications-dev
   namespace: grc-dev
 spec:
-  schedule: '0 1 * * *'
+  schedule: '*/10 * * * *'
   concurrencyPolicy: Forbid
   jobTemplate:
     spec:
