--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,8 +110,8 @@ jobs:
           command: |
             . venv/bin/activate
             flask db stamp head
-            flask db migrate
-            flask db upgrade
+            #flask db migrate
+            #flask db upgrade
       - run:
           name: Run unit and integration tests
           command: |
