Rst 6781 prod nightly fix (#239)
* RST-6781 prod nightly add new tests for job

* remove old test

* dont use custom error handler on grc and admin if on dev or local

* wrap getting of data in try except to catch error

* seaprate tests out and run respective jobs

* move tests to respective job tests

* create new job files and move job code from notify job to respective job files

* remove code unrelated to this job

* add job blueprints

* add new job manifests

* update imports in failing test

* amend pipeline to update all jobs

* log application notified count in job

* add more informative logs

* change job schedule to run nightly

* add test user not notified if already have submitted app

* format code

* format code

* run anonymise job every 10 mins for testing

* revert schedule of anonymis apps job

* upgrade xhtml2pdf

* revert

* debug db migration step

* remove unused imports

* pin python-bidi to last known stable version so not to break xhtml2pdf

* remigrate the db

* stagger the jobs

* add jobs for staging and prod

--- a/deploy/production/jobs/anonymise-expired-applications.yaml
+++ b/deploy/production/jobs/anonymise-expired-applications.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: notify-applicants-inactive-applications-dev
-  namespace: grc-dev
+  name: anonymise-expired-applications-prod
+  namespace: grc-prod
 spec:
-  schedule: '0 2 * * *'
+  schedule: '30 0 * * *'
   concurrencyPolicy: Forbid
   jobTemplate:
     spec:
@@ -15,18 +15,18 @@ spec:
             tier: worker
         spec:
           restartPolicy: OnFailure
-          serviceAccountName: grc-dev
+          serviceAccountName: grc-prod
           containers:
           - name: admin-jobs
-            image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/grc-dev-ecr:grc-admin-latest
+            image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/grc-prod-ecr:grc-admin-latest
             imagePullPolicy: Always
             command:
               - /bin/sh
               - -c
-              - flask jobs.notify_applicants_inactive_apps run
+              - flask jobs.anonymise_expired_applications run
             envFrom:
               - configMapRef:
-                  name: grc-dev-ecr-circleci
+                  name: grc-prod-ecr-circleci
             env:
               - name: AWS_REGION
                 value: eu-west-2
@@ -38,7 +38,7 @@ spec:
               - name: DATABASE_URL
                 valueFrom:
                   secretKeyRef:
-                    name: rds-postgresql-instance-output
+                    name: dps-rds-instance-output
                     key: url
               - name: DEFAULT_ADMIN_USER
                 value: mark.butler@HMCTS.net
@@ -82,7 +82,7 @@ spec:
               - name: SQLALCHEMY_DATABASE_URI
                 valueFrom:
                   secretKeyRef:
-                    name: rds-postgresql-instance-output
+                    name: dps-rds-instance-output
                     key: sql_alchemy_url
               - name: SQLALCHEMY_KEY
                 valueFrom:
