--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,7 +224,7 @@ jobs:
       - run:
           name: rolling update image jobs
           command: |
-            sed -i -e s/:grc-admin-latest/:grc-admin-$CIRCLE_SHA1/ deploy/staging/jobs/notify-applicants-inactive-applications.yaml
+            find deploy/staging/jobs/ -name '*.yaml' -exec sed -i -e "s/:grc-admin-latest/:grc-admin-$CIRCLE_SHA1/g" {} +
             kubectl apply -n grc-preprod --record=false -f ./deploy/staging/jobs
 
       - deploy:
@@ -251,7 +251,7 @@ jobs:
       - run:
           name: rolling update image jobs
           command: |
-            sed -i -e s/:grc-admin-latest/:grc-admin-$CIRCLE_SHA1/ deploy/production/jobs/notify-applicants-inactive-applications.yaml
+            find deploy/production/jobs/ -name '*.yaml' -exec sed -i -e "s/:grc-admin-latest/:grc-admin-$CIRCLE_SHA1/g" {} +
             kubectl apply -n grc-prod --record=false -f ./deploy/production/jobs
 
       - deploy:
