--- a/deploy/staging/ingress-admin.yaml
+++ b/deploy/staging/ingress-admin.yaml
@@ -4,7 +4,7 @@ metadata:
   name: gender-recognition-service-admin
   namespace: grc-preprod
   annotations:
-    nginx.ingress.kubernetes.io/whitelist-source-range: "194.33.196.0/24, 194.33.192.0/24, 51.149.249.0/29, 51.149.249.32/29, 51.149.250.0/24, 10.176.40.129"
+    nginx.ingress.kubernetes.io/whitelist-source-range: "194.33.196.0/24, 194.33.192.0/24, 51.149.249.0/29, 51.149.249.32/29, 51.149.250.0/24"
     nginx.ingress.kubernetes.io/server-snippet: |
       location @custom_403 {
         return 403 "{\"msg\":\"<br/>Gender Recognition Panel<br/>This is a restricted page. Please contact by email or telephone if you need access<br/>GRPenquiries@justice.gov.uk<br>Telephone: 0300 123 4503  Monday to Friday, 9am to 5pm<br/>\"}";
