--- a/deploy/staging/ingress.yaml
+++ b/deploy/staging/ingress.yaml
@@ -18,13 +18,13 @@ metadata:
     #      return 403 '{"error": {"status_code": 403,"status": "Not allowed buddy"}}';
     #  }
     nginx.ingress.kubernetes.io/enable-modsecurity: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: "15m"
     nginx.ingress.kubernetes.io/modsecurity-snippet: |
       SecRuleEngine On
       SecDefaultAction "phase:2,pass,log,tag:github_team=pet"
       
       # Increase request body limit to 15MB
       SecRequestBodyLimit 15728640
-      SecRequestBodyInMemoryLimit 15728640
       
       # Custom rule to allow larger uploads and remove specific rules for /upload path
       SecRule REQUEST_URI "@beginsWith /upload" \
