--- a/deploy/staging/ingress.yaml
+++ b/deploy/staging/ingress.yaml
@@ -26,7 +26,7 @@ metadata:
       SecRuleEngine On
       SecDefaultAction "phase:2,pass,log,tag:github_team=pet"
       
-      # Increase request body limit to 15MB
+      # Increase request body limit to 50MB
       SecRequestBodyLimit 52428800
       
       # Custom rule to allow larger uploads and remove specific rules for /upload path
@@ -36,7 +36,14 @@ metadata:
         pass,\
         nolog,\
         ctl:ruleRemoveById=951240,\
-        ctl:ruleRemoveById=920420,\
+        ctl:ruleRemoveById=920420"
+
+      # Set global request body limit
+      SecAction \
+        "id:900200,\
+        phase:1,\
+        nolog,\
+        pass,\
         ctl:requestBodyLimit=52428800"
 spec:
   ingressClassName: modsec
