--- a/deploy/staging/ingress.yaml
+++ b/deploy/staging/ingress.yaml
@@ -18,23 +18,28 @@ metadata:
     #      return 403 '{"error": {"status_code": 403,"status": "Not allowed buddy"}}';
     #  }
     nginx.ingress.kubernetes.io/enable-modsecurity: "true"
-    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
-    nginx.ingress.kubernetes.io/client-body-buffer-size: "100m"
+    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+    nginx.ingress.kubernetes.io/client-body-buffer-size: "50m"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     nginx.ingress.kubernetes.io/modsecurity-snippet: |
       SecRuleEngine On
       SecDefaultAction "phase:2,pass,log,tag:github_team=pet"
       
-      # Set global request body limit to 50MB
-      # SecRequestBodyLimit 52428800
-      
+      # Disable specific ModSecurity rules related to file size for upload path
       SecRule REQUEST_URI "@beginsWith /upload" \
         "id:1000,\
         phase:1,\
         pass,\
         nolog,\
-        ctl:ruleEngine=Off"
+        ctl:ruleRemoveById=920420"
+      
+      SecRule REQUEST_URI "@beginsWith /upload" \
+        "id:1001,\
+        phase:1,\
+        pass,\
+        nolog,\
+        ctl:ruleRemoveById=951240"
 spec:
   ingressClassName: modsec
   tls:
