--- a/deploy/staging/ingress.yaml
+++ b/deploy/staging/ingress.yaml
@@ -27,21 +27,36 @@ metadata:
       SecDefaultAction "phase:2,pass,log,tag:github_team=pet"
 
       SecRequestBodyLimit 78643200
-      
-      # Disable specific ModSecurity rules related to file size for upload path
+
       SecRule REQUEST_URI "@beginsWith /upload" \
         "id:1000,\
         phase:1,\
         pass,\
         nolog,\
-        ctl:ruleRemoveById=920420"
+        ctl:ruleRemoveById=951240"
       
+      # Disable specific ModSecurity rules related to file size for upload path
       SecRule REQUEST_URI "@beginsWith /upload" \
         "id:1001,\
         phase:1,\
         pass,\
         nolog,\
-        ctl:ruleRemoveById=951240"
+        ctl:ruleRemoveById=920420"
+
+      SecRule REQUEST_URI "@beginsWith /upload" \
+        "id:1002,\
+        phase:1,\
+        pass,\
+        nolog,\
+        ctl:ruleRemoveById=920300"
+
+      SecRule REQUEST_URI "@beginsWith /upload" \
+        "id:1003,\
+        phase:1,\
+        pass,\
+        nolog,\
+        ctl:ruleRemoveById=920310"
+
 spec:
   ingressClassName: modsec
   tls:
