--- a/deploy/production/ingress.yaml
+++ b/deploy/production/ingress.yaml
@@ -6,21 +6,37 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-grc-prod-green
     external-dns.alpha.kubernetes.io/aws-weight: "100"
+    nginx.ingress.kubernetes.io/server-snippet: |
+      location @custom_403 {
+        return 403 "<h1>There is a problem:</h1><br><h3>Go back to the previous page using the back arrow and enter valid content</h3>";
+      }
+      error_page 403 @custom_403;
     nginx.ingress.kubernetes.io/enable-modsecurity: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+    nginx.ingress.kubernetes.io/client-body-buffer-size: "50m"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     nginx.ingress.kubernetes.io/modsecurity-snippet: |
       SecRuleEngine On
       SecDefaultAction "phase:2,pass,log,tag:github_team=pet"
+
+      SecRequestBodyLimit 78643200
+
       SecRule REQUEST_URI "@beginsWith /upload" \
         "id:1000,\
         phase:1,\
         pass,\
         nolog,\
         ctl:ruleRemoveById=951240"
-    nginx.ingress.kubernetes.io/server-snippet: |
-      location @custom_403 {
-        return 403 "<h1>There is a problem:</h1><br><h3>Go back to the previous page using the back arrow and enter valid content</h3>";
-      }
-      error_page 403 @custom_403;
+      
+      # Disable specific ModSecurity rules related to file size for upload path
+      SecRule REQUEST_URI "@beginsWith /upload" \
+        "id:1001,\
+        phase:1,\
+        pass,\
+        nolog,\
+        ctl:ruleRemoveById=920420"
+
 spec:
   ingressClassName: modsec
   tls:
