--- a/deploy/development/admin-deployment.yaml
+++ b/deploy/development/admin-deployment.yaml
@@ -16,7 +16,6 @@ spec:
       containers:
       - name: grc-admin
         image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/grc-dev-ecr:grc-admin-latest
-        command: ["flask", "db", "upgrade"]
         imagePullPolicy: Always
         ports:
         - containerPort: 3001
@@ -100,4 +99,4 @@ spec:
                 name: basic-auth
                 key: glimr-api-key
           - name: GLIMR_BASE_URL
-            value: "https://glimr-preprod.staging.apps.hmcts.net/GLiMR_preprod/"
+            value: "https://glimr-preprod.staging.apps.hmcts.net/GLiMR_preprod"
