--- a/deploy/development/admin-deployment.yaml
+++ b/deploy/development/admin-deployment.yaml
@@ -99,4 +99,4 @@ spec:
                 name: basic-auth
                 key: glimr-api-key
           - name: GLIMR_BASE_URL
-            value: "https://glimr-preprod.staging.apps.hmcts.net/GLiMR_preprod"
+            value: "https://glimr-preprod.staging.apps.hmcts.net/glimr_preprod/api/tdsapi"
