RST-6992 glimr api client (#302)
* Create GLiMR API client on the backend. Create temporary Javascript to call it

* Add juristictionId and onlineMappingCode. 

* Edit migration files to add case registered. Leave case_registered as non-nullable.

* Refactor javascript for applications.js

--- a/deploy/development/admin-deployment.yaml
+++ b/deploy/development/admin-deployment.yaml
@@ -93,3 +93,10 @@ spec:
               secretKeyRef:
                 name: elasticache-grc-dev
                 key: url
+          - name: GLIMR_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: basic-auth
+                key: glimr-api-key
+          - name: GLIMR_BASE_URL
+            value: "https://glimr-preprod.staging.apps.hmcts.net/glimr_preprod/api/tdsapi"
