--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
           FLASK_APP: grc
           LOG_LEVEL: DEBUG
           TEST_URL: 'http://localhost:8080'
+          ADMIN_TEST_URL: 'http://localhost:8181'
           SECRET_KEY: ef987sd9fwkjefosf9we0svs9q3evsd0
           SQLALCHEMY_DATABASE_URI: 'postgresql://postgres:password@localhost:5432/grc'
           SQLALCHEMY_TRACK_MODIFICATION: false
@@ -44,6 +45,8 @@ jobs:
           AWS_REGION: eu-west-2
           GOVUK_PAY_API: 'https://publicapi.payments.service.gov.uk/'
           GOVUK_PAY_API_KEY: '${GOVUK_PAY_API_KEY}'
+          GLIMR_API_KEY: '123'
+          GLIMR_BASE_URL: 'http://localhost:8181/glimr/api'
       - image: 'circleci/postgres:10.4'
         environment:
           POSTGRES_HOST: localhost
@@ -127,6 +130,7 @@ jobs:
           command: |
             . venv/bin/activate
             waitress-serve --call --port=8080 'grc:create_app' &
+            waitress-serve --call --port=8181 'admin:create_app' &
             pytest tests/test_ping_json.py --max-retries 5 --timeout 3 --html=reports/smoke_report.html
             pytest tests/end_to_end_tests/* -s --show-capture=all -v --html=reports/e2e_report.html
       - store_artifacts:
