Make dts email as default admin user

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           SECRET_KEY: ef987sd9fwkjefosf9we0svs9q3evsd0
           SQLALCHEMY_DATABASE_URI: 'postgresql://postgres:password@localhost:5432/grc'
           SQLALCHEMY_TRACK_MODIFICATION: false
-          DEFAULT_ADMIN_USER: grc-service-account@cabinetoffice.gov.uk
+          DEFAULT_ADMIN_USER: dts-legacy-apps-support-team@hmcts.net
           NOTIFY_API: '${NOTIFY_API}'
           NOTIFY_OVERRIDE_EMAIL: ivan.touloumbadjian@hmcts.net
           BUCKET_NAME: 'cloud-platform-558bc9877f5cc03fc5d7a241c17360b5' # use the DEV S3 bucket for e2e test uploads for all environments
