--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,6 @@ jobs:
           DATABASE_URL: 'postgresql://postgres:password@localhost:5432/grc'
           FLASK_ENV: test
           FLASK_DEBUG: 1
-          FLASK_APP: admin
           LOG_LEVEL: DEBUG
           TEST_URL: 'http://localhost:8080'
           ADMIN_TEST_URL: 'http://localhost:8181'
@@ -129,7 +128,8 @@ jobs:
           name: Start site and run e2e
           command: |
             . venv/bin/activate
-            waitress-serve --call --host=0.0.0.0 --port=8181 'admin:create_app' &
+            FLASK_APP=grc waitress-serve --call --host=0.0.0.0 --port=8080 'grc:create_app' &
+            FLASK_APP=admin waitress-serve --call --host=0.0.0.0 --port=8181 'admin:create_app' &
             pytest tests/test_ping_json.py --max-retries 5 --timeout 3 --html=reports/smoke_report.html
             pytest tests/end_to_end_tests/journey_admin -s --show-capture=all -v --html=reports/e2e_report.html
       - store_artifacts:
