--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
       - image: 'circleci/python:3.8'
         environment:
           DATABASE_URL: 'postgresql://postgres:password@localhost:5432/grc'
+          FLASK_APP: grc
           FLASK_ENV: test
           FLASK_DEBUG: 1
           LOG_LEVEL: DEBUG
@@ -38,13 +39,13 @@ jobs:
           SQLALCHEMY_DATABASE_URI: 'postgresql://postgres:password@localhost:5432/grc'
           SQLALCHEMY_TRACK_MODIFICATION: false
           DEFAULT_ADMIN_USER: dts-legacy-apps-support-team@hmcts.net
+          DEFAULT_ADMIN_PASSWORD: '123ABC'
           NOTIFY_API: '${NOTIFY_API}'
           NOTIFY_OVERRIDE_EMAIL: ivan.touloumbadjian@hmcts.net
           BUCKET_NAME: 'cloud-platform-558bc9877f5cc03fc5d7a241c17360b5' # use the DEV S3 bucket for e2e test uploads for all environments
           AWS_REGION: eu-west-2
           GOVUK_PAY_API: 'https://publicapi.payments.service.gov.uk/'
           GOVUK_PAY_API_KEY: '${GOVUK_PAY_API_KEY}'
-          GLIMR_API_KEY: '123'
           GLIMR_BASE_URL: 'http://localhost:8181/glimr/api/tdsapi'
       - image: 'circleci/postgres:10.4'
         environment:
@@ -116,9 +117,9 @@ jobs:
           name: Database migration
           command: |
             . venv/bin/activate
-            FLASK_APP=grc flask db stamp head
-            FLASK_APP=grc flask db migrate
-            FLASK_APP=grc flask db upgrade
+            flask db stamp head
+            flask db migrate
+            flask db upgrade
       - run:
           name: Run unit and integration tests
           command: |
