--- a/deploy/development/admin-deployment.yaml
+++ b/deploy/development/admin-deployment.yaml
@@ -40,7 +40,12 @@ spec:
                 name: rds-postgresql-instance-output
                 key: url
           - name: DEFAULT_ADMIN_USER
-            value: mark.butler@HMCTS.net
+            value: dts-legacy-apps-support-team@hmcts.net
+          - name: DEFAULT_ADMIN_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: basic-auth
+                key: default-admin-password
           - name: FLASK_APP
             value: admin
           - name: FLASK_ENV
