--- a/deploy/production/jobs/delete-completed-applications.yaml
+++ b/deploy/production/jobs/delete-completed-applications.yaml
@@ -41,7 +41,12 @@ spec:
                     name: dps-rds-instance-output
                     key: url
               - name: DEFAULT_ADMIN_USER
-                value: mark.butler@HMCTS.net
+                value: dts-legacy-apps-support-team@hmcts.net
+              - name: DEFAULT_ADMIN_PASSWORD
+                valueFrom:
+                  secretKeyRef:
+                    name: basic-auth
+                    key: default-admin-password
               - name: FLASK_APP
                 value: admin
               - name: FLASK_ENV
