DEBUG: in circle ci add upgrade before migrate to upgrade new migration files

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,9 @@ jobs:
           name: Database migration
           command: |
             . venv/bin/activate
+            flask db upgrade
             flask db stamp head
+            flask db upgrade
             flask db migrate
             flask db upgrade
       - run:
