--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,6 +114,7 @@ jobs:
           name: Database migration
           command: |
             . venv/bin/activate
+            flask db upgrade
             flask db stamp head
             flask db migrate
             flask db upgrade
