--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           FLASK_APP: grc
           LOG_LEVEL: DEBUG
           TEST_URL: 'http://localhost:8080'
-          SECRET_KEY: ***REMOVED***
+          SECRET_KEY: ef987sd9fwkjefosf9we0svs9q3evsd0
           SQLALCHEMY_DATABASE_URI: 'postgresql://postgres:password@localhost:5432/grc'
           SQLALCHEMY_TRACK_MODIFICATION: false
           DEFAULT_ADMIN_USER: grc-service-account@cabinetoffice.gov.uk
