--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Babel==2.14.0
 blinker==1.8.2
 boto3==1.35.44
 botocore==1.35.44
+cachelib==0.13.0
 cachetools==5.5.2
 certifi==2024.8.30
 cffi==1.17.1
@@ -35,6 +36,7 @@ Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-Principal==0.4.0
 Flask-Scss==0.5
+Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 Flask-UUID==0.2
 Flask-WTF==1.2.1
@@ -53,6 +55,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 memory-profiler==0.61.0
+msgspec==0.19.0
 notifications-python-client==10.0.0
 ordered-set==4.1.0
 oscrypto==1.3.0
